hello/hello-app2.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-path-app2
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: hello-world-path-app2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-path-app2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-world-path-app2
  template:
    metadata:
      labels:
        app: hello-world-path-app2
    spec:
      containers:
      - name: hello-world-path
        image: d3or/hello-world-path
        ports:
        - containerPort: 3000
