hello/hello-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-fanout
spec:
  rules:
  - host: demo.localdev.me
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: demo
            port:
              number: 80
  - host: nginx.ariadnex.me
    http:
      paths:
        - path: "/"
          pathType: Prefix
          backend: 
            service:
              name: nginx
              port:
                number: 80
